--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
       <div class="flex flex-wrap">
         <!-- Kolom Teks -->
         <div class="w-full lg:w-1/2 px-4 self-center text-center lg:text-left lg:pl-20 mb-20 sm:mb-0">
-          <h1 class="font-semibold md:text-xl mb-3 dark:text-white">Hi! I'm<span class="block text-dark font-bold text-3xl sm:text-4xl lg:text-5xl dark:text-white" data-aos="fade-right">Febiola Angelina</span></h1>
+          <h1 class="font-semibold md:text-2xl mb-3 dark:text-white">Hi! I'm<span class="block text-dark font-bold text-3xl sm:text-4xl lg:text-5xl dark:text-white" data-aos="fade-right">Febiola Angelina</span></h1>
           <h2 class="font-medium text-slate-500 mb-5 text-lg lg:text-2xl dark:text-slate-200">Student & <span class="">General Worker</span></h2>
           <p class="font-medium text-slate-400 leading-relaxed mb-10 dark:text-slate-300">The struggle you're in today is developing the strength you need for tomorrow</p>
           <a href="https://api.whatsapp.com/send?phone=6289660877090" target="_blank" class="z-10 text-white bg-slate-700 px-6 py-3 font-semibold text-base rounded-full border-solid border-2 border-slate-700 hover:border-solid hover:bg-transparent hover:text-dark hover:border-dark hover:border-2 transition-all duration-200 dark:bg-white dark:text-gray-900 dark:border-white dark:hover:bg-transparent dark:hover:text-white">Contact Me</a>
         </div>
         <!-- Kolom Gambar -->
         <div class="w-full lg:w-1/2 px-4 self-end z-0 sm:mt-20 md:mt-0">
-          <div class="mt-12 lg:mt-0 relative lg:right-0"> 
-            <img data-aos="zoom-in" src="src/img/febiola.png" alt="Febiola Angelina" class="max-w-[50%] h-auto mx-auto brightness-125 z-10 relative md:max-w-[200px] lg:max-w-[250px]">
+          <div class="mt-12 lg:mt-0 relative lg:right-0">
+            <img data-aos="zoom-in" src="src/img/febiola.png" alt="Febiola Angelina" class="w-full max-w-[50%] h-auto mx-auto brightness-125 z-10 relative md:max-w-[200px] lg:max-w-[250px]">
             <div class="absolute bottom-0 -translate-x-1/2 left-1/2 md:scale-110 fill-gray-900 dark:fill-slate-800 z-0">
               <svg class="sm:max-w-[300px] sm:pt-[50%] md:max-w-[1000px] md:pt-[0]" width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                 <path d="M47.4,-51C59.2,-35.6,65.1,-17.8,63.4,-1.7C61.7,14.5,52.6,28.9,40.8,36.6C28.9,44.2,14.5,45,-2,47C-18.4,49,-36.8,52.1,-45.4,44.5C-53.9,36.8,-52.5,18.4,-51.2,1.3C-49.9,-15.8,-48.7,-31.7,-40.2,-47.1C-31.7,-62.4,-15.8,-77.3,1,-78.3C17.8,-79.2,35.6,-66.3,47.4,-51Z" transform="translate(100 100) scale(1.2) rotate(25)"/>
@@ -215,6 +215,7 @@
       </div>
     </div>
   </section>
+  
   
   
   
