fix aimation bug text

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <style>
    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-   html{
-    overflow-x: hidden;
-   }
+  
 
    .non-interactive {
             pointer-events: none;
@@ -217,24 +215,23 @@
   </section>
   
   
-  
-  
+
 <!--Home section end-->
 <!--About section start-->
 <section id="about" class="pt-36 pb-32 2xl:px-12 3xl:px-0 dark:bg-gray-900">
   <div class="container m-auto">
       <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
-              <h4 data-aos="fade-right" class="font-bold uppercase text-dark text-lg mb-3 dark:text-slate-100">About Me</h4>
-              <h2 data-aos="fade-right" class="font-bold text-slate-700 text-3xl mb-5 lg:text-4xl dark:text-slate-400">Let's get to know me better on this website.</h2>
-              <p data-aos="fade-right" class="font-medium text-slate-500 text-base lg:text-lg text-justify">
+              <h4 data-aos="zoom-in" class="font-bold uppercase text-dark text-lg mb-3 dark:text-slate-100">About Me</h4>
+              <h2 data-aos="zoom-in"" class="font-bold text-slate-700 text-3xl mb-5 lg:text-4xl dark:text-slate-400">Let's get to know me better on this website.</h2>
+              <p data-aos="fade-up" class="font-medium text-slate-500 text-base lg:text-lg text-justify">
                 My name is Febiola Angelina, but you can call me Febi. I was born on February 9, 2004. Though I am still young, I have taken on the responsibility of working to support myself after graduating from high school. My journey has taught me resilience and adaptability, skills that I cherish and strive to improve every day. I believe that every experience, no matter how challenging, is an opportunity to grow and learn. Embracing these challenges has allowed me to develop a strong sense of independence and a proactive attitude towards life's obstacles.
                  
               </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-              <h3 data-aos="fade-left" class="font-semibold text-slate-700 text-2xl mb-4 lg:text-3xl lg:pt-11  lg:font-bold dark:text-slate-400">Let's become friends and get to know me better.</h3>
-              <p data-aos="fade-left" class="font-medium text-slate-500 text-base mb-6 lg:text-lg text-justify mt-6">
+              <h3 data-aos="zoom-in" class="font-semibold text-slate-700 text-2xl mb-4 lg:text-3xl lg:pt-11  lg:font-bold dark:text-slate-400">Let's become friends and get to know me better.</h3>
+              <p data-aos="fade-up" class="font-medium text-slate-500 text-base mb-6 lg:text-lg text-justify mt-6">
                 Balancing the transition from school to work has been a challenging yet rewarding experience. It has provided me with valuable real-world insights and a strong work ethic. Though I haven't had the opportunity to attend college yet, I am determined to continue my education in the future. I believe in the power of perseverance and hard work, and I am committed to achieving my goals. With dedication and ongoing learning, I aim to make meaningful contributions to my field and community, striving to inspire others along the way.
               </p>
 
@@ -409,28 +406,28 @@
   </div>
 
   <div class="wrapper flex justify-around flex-wrap mb-6 mt-10"> <!-- Adjusted margin bottom -->
-    <div class="card" data-aos="zoom-in" data-aos-delay="100">
+    <div class="card bg-white" data-aos="zoom-in" data-aos-delay="100">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
       </div>
       <div class="text text-blue-600">Team Work</div>
     </div>
-    <div class="card js" data-aos="zoom-in" data-aos-delay="200">
+    <div class="card js bg-white" data-aos="zoom-in" data-aos-delay="200">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
       </div>
       <div class="text">Responsible</div>
     </div>
-    <div class="card node" data-aos="zoom-in" data-aos-delay="300">
+    <div class="card node bg-white" data-aos="zoom-in" data-aos-delay="300">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
       </div>
       <div class="text">Confidence</div>
     </div>
-    <div class="card react" data-aos="zoom-in" data-aos-delay="400">
+    <div class="card react bg-white" data-aos="zoom-in" data-aos-delay="400">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
@@ -689,7 +686,7 @@
       </div>
 </section>
    <!-- cta section -->
-   <div class="bg-white dark:bg-gray-800">
+   <div class="bg-white dark:bg-gray-800 mt-10">
     <div class="text-center w-full mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 z-20">
       <h2 class="text-3xl font-bold text-black dark:text-white sm:text-4xl">
         <span class="block">
