change animation aos

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <div class="flex flex-wrap">
         <!-- Kolom Teks -->
         <div class="w-full lg:w-1/2 px-4 self-center text-center lg:text-left lg:pl-20 mb-20 sm:mb-0">
-          <h1 class="font-semibold md:text-2xl mb-3 dark:text-white">Hi! I'm<span class="block text-dark font-bold text-3xl sm:text-4xl lg:text-5xl dark:text-white" data-aos="fade-right">Febiola Angelina</span></h1>
+          <h1 class="font-semibold md:text-2xl mb-3 dark:text-white">Hi! I'm<span class="block text-dark font-bold text-3xl sm:text-4xl lg:text-5xl dark:text-white" data-aos="zoom-in">Febiola Angelina</span></h1>
           <h2 class="font-medium text-slate-500 mb-5 text-lg lg:text-2xl dark:text-slate-200">Student & <span class="">General Worker</span></h2>
           <p class="font-medium text-slate-400 leading-relaxed mb-10 dark:text-slate-300">The struggle you're in today is developing the strength you need for tomorrow</p>
           <a href="https://api.whatsapp.com/send?phone=6289660877090" target="_blank" class="z-10 text-white bg-slate-700 px-6 py-3 font-semibold text-base rounded-full border-solid border-2 border-slate-700 hover:border-solid hover:bg-transparent hover:text-dark hover:border-dark hover:border-2 transition-all duration-200 dark:bg-white dark:text-gray-900 dark:border-white dark:hover:bg-transparent dark:hover:text-white">Contact Me</a>
@@ -406,28 +406,28 @@
   </div>
 
   <div class="wrapper flex justify-around flex-wrap mb-6 mt-10"> <!-- Adjusted margin bottom -->
-    <div class="card bg-white" data-aos="zoom-in" data-aos-delay="100">
+    <div class="card dark:bg-white" data-aos="zoom-in" data-aos-delay="100">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
       </div>
       <div class="text text-blue-600">Team Work</div>
     </div>
-    <div class="card js bg-white" data-aos="zoom-in" data-aos-delay="200">
+    <div class="card js dark:bg-white" data-aos="zoom-in" data-aos-delay="200">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
       </div>
       <div class="text">Responsible</div>
     </div>
-    <div class="card node bg-white" data-aos="zoom-in" data-aos-delay="300">
+    <div class="card node dark:bg-white" data-aos="zoom-in" data-aos-delay="300">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
       </div>
       <div class="text">Confidence</div>
     </div>
-    <div class="card react bg-white" data-aos="zoom-in" data-aos-delay="400">
+    <div class="card react dark:bg-white" data-aos="zoom-in" data-aos-delay="400">
       <div class="circle">
         <div class="bar"></div>
         <div class="box"><span></span></div>
