--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
   <!-- my skill with no card -->
   <div class="flex justify-center items-center dark:bg-gray-800">
-    <div class="max-w-xl w-full" data-aos="fade-right">
+    <div class="max-w-xl w-full" data-aos="zoom-in">
       <div class="flex justify-between mb-4">
         <div class="flex-1">
           <div class="flex justify-between py-1">
@@ -492,7 +492,7 @@
       </div>
     </div>
 
-    <div class="max-w-xl w-full ml-3" data-aos="fade-left">
+    <div class="max-w-xl w-full ml-3" data-aos="zoom-in">
       <div class="flex justify-between mb-4">
         <div class="flex-1">
           <div class="flex justify-between py-1">
